--- a/code-improvement/template/html/signup.html
+++ b/code-improvement/template/html/signup.html
@@ -3,12 +3,12 @@
 {{template "header2" .}}
 <form method="POST" action="/api/createuser" id="form-create-user">
     <i class="fa fa-user fa-5x"></i>
-    <input id="email" name="email" type="email" placeholder="Enter your email">
+    <input id="email" name="email" type="email" placeholder="Enter your email" required>
     <p class="form-field-err"></p>
-    <input id="userName" name="userName" placeholder="Enter a twitter name" autocomplete="off">
+    <input id="userName" name="userName" placeholder="Enter a twitter name" autocomplete="off" required>
     <p class="form-field-err" id="username-err"></p>
-    <input id="password" name="password" type="password" placeholder="Create your password">
-    <input id="password2" name="password2" type="password" placeholder="Retype your password">
+    <input id="password" name="password" type="password" placeholder="Create your password" required>
+    <input id="password2" name="password2" type="password" placeholder="Retype your password" required>
     <p class="form-field-err" id="password-err"></p>
     <button id="btn-create-account">Create Account</button>
 </form>
